ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: mytest
            port:
              number: 8080
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
---
